@startuml
skinparam classAttributeIconSize 0

class Client {
-clientsCitizenCardNumber
-nhsNumber
-birthDate
-sex
-tinNumber
-email
-name
-phoneNumber
+Client(clientsCitizenCardNumber, nhsNumber, birthDate \n, sex, tinNumber, email, name, phoneNumber )
}

class ClientStore{
+registerClient(clientsCitizenCardNumber, nhsNumber, birthDate \n, sex, tinNumber, email, name, phoneNumber)
+validateClient(cl)
+saveClient(cl)
}


class AuthFacade{
+addUser(String name, String email, String pwd)
+existsUser(String email)
}



class Company {
-designation
+getTestTypeStore()
}





class CreateTaskController {
  +registerClient(clientsCitizenCardNumber, nhsNumber, birthDate \n, sex, tinNumber, email, name, phoneNumber)
  +saveClient()
}

class CreateTaskUI {

}

CreateTaskUI ..> CreateTaskController
CreateTaskController ..> Company
CreateTaskController ..> AuthFacade
CreateTaskController ..> ClientStore
'/Client ..> UserSession'/
Company "1" --> "*" Client : knows
Company "1" -- "1" ClientStore : uses >
Company  --  AuthFacade : knows >
ClientStore ..> Client

@enduml